--- a/src/main/resources/templates/admin/fattorini.html
+++ b/src/main/resources/templates/admin/fattorini.html
@@ -54,6 +54,7 @@ input {
       margin: 8px 0;
       box-sizing: border-box;
       border: 3px solid #ccc;
+      border-radius: 20px;
       outline: none;
     }
 
@@ -69,6 +70,7 @@ input {
 <body>
 <div class="space"></div>
 <div class="table-div">
+<button class ="bottone" id="myBtn">Aggiungi</button>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -92,7 +94,7 @@ input {
   </tbody>
 </table>
 </div>
-<button class ="bottone" id="myBtn">Aggiungi</button>
+
 
 	
 <!-- The Modal -->
