--- a/src/main/resources/templates/default/ordine.html
+++ b/src/main/resources/templates/default/ordine.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head  th:replace="fragments/base.html :: headerfiles(title='Menu')">  </head>
+
 <style>
 
   
@@ -30,48 +33,6 @@
             padding-bottom: 32px!important;
         }
 
-
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 150px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80% !important;
-  height: 90%;
-  border-radius: 10px;
-}
-
-/* The Close Button */
-.close {
-  color: rgb(255, 0, 0);
-  float: right;
-  padding-right: 10px;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
 input {
       padding: 12px 20px;
       margin: 8px 0;
@@ -101,11 +62,8 @@ input {
 }
 
 </style>
-
-<html>
-<head  th:replace="fragments/base.html :: headerfiles(title='Menu')">  </head>
 <body>
-
+ <header th:replace="fragments/default.html :: header"></header>
 		
 		<!-- Page content -->
 	    <div class="stile-content stile-padding-large stile-margin-top">
@@ -117,13 +75,8 @@ input {
 	      
 	
 
-<form th:action="@{/ordine}" method="POST" th:object="${ordine}">
+<form th:action="@{/default/ordine}" method="POST" th:object="${ordine}">
 
-<select hidden="true " th:field="*{cliente}" required>
-				<th:block th:each="u :${utente}">
-					<option th:value="${u.id}"/>
-				</th:block> 
-			</select>
   <div class="container-menu">
     <div class="menu">
       <h2 class="menu-group-heading">
@@ -155,47 +108,23 @@ input {
       </div>
     </div>
   </div>
+    <div class="form-group">
+    <label for="Textarea1">Note:</label>
+    <textarea class="form-control" id="Textarea1" th:field="*{note}" rows="3"></textarea>
+  </div>
+  
+   <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Orario di preferenza:</label>
+  <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref"  th:field="*{orario}">
+    <option th:each="h : ${orari}" th:value="${h}" th:text="${h}"></option>
+  </select>
 
- 
+ <div style="display: flex;justify-content: center;height: 9vh;">
+ <button class="btn btn-success" type="submit" style="height: 5vh;margin: auto;">ORDINA</button>
+</div>
 </form>
 </body>
 	         	
-	         	<!-- The Modal -->
+	         
 			
-					  
-					</div>
-		        </div>
-	        
-            	
-	        </div>
-	    </div> 
-</body>
 
-<script>
-		// Get the modal
-		var modal = document.getElementById("myModal");
-		
-		// Get the button that opens the modal
-		var btn = document.getElementById("myBtn");
-		
-		// Get the <span> element that closes the modal
-		var span = document.getElementsByClassName("close")[0];
-		
-		// When the user clicks the button, open the modal 
-		btn.onclick = function() {
-		  modal.style.display = "block";
-		}
-		
-		// When the user clicks on <span> (x), close the modal
-		span.onclick = function() {
-		  modal.style.display = "none";
-		}
-		
-		// When the user clicks anywhere outside of the modal, close it
-		window.onclick = function(event) {
-		  if (event.target == modal) {
-		    modal.style.display = "none";
-		  }
-		}
-	</script>
 </html>
