--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -148,27 +148,45 @@ header{
 	width: 100%;
 	height: 160px;
 }
-.table {
-     width: 100%;
-     max-width: 100%;
-     margin-bottom: 1rem;
-     background-color: transparent
- }
 
- .table thead th{
-     border-top: 0;
-     border-bottom-width: 1px;
-     font-weight: 500;
-     font-size: .875rem;
-     text-transform: uppercase
- }
 
- .table td {
-     font-size: 0.875rem;
-     padding: .875rem 0.9375rem
- }
-.table-div{
-	margin: auto
-	;
-	width: 80%;
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 150px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content-menu {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 85%;
+  height: 85%;
+  border-radius: 10px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  padding-right: 10px;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
