--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -360,6 +360,7 @@ border:0 !important;
   flex: 25%;
   max-width: 40%;
   padding: 0 4px;
+  position: relative;
 }
 
 .column img {
@@ -963,3 +964,44 @@ header {
     color: black;
     /* border: 3px solid brown; */
 }  
+/*###################CONTATTACI################*/
+.form { max-width:420px; margin:50px auto; }
+
+.feedback-input {
+  font-weight:500;
+  font-size: 18px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border:2px solid #CC6666;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width:100%;
+  box-sizing: border-box;
+  outline:0;
+}
+
+.feedback-input:focus { border:2px solid #CC4949; }
+
+.textarea {
+  height: 150px;
+  line-height: 150%;
+  resize:vertical;
+}
+
+.contattaci {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  width: 100%;
+  background:#CC6666;
+  border-radius:5px;
+  border:0;
+  cursor:pointer;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
+  transition: all 0.3s;
+  margin-top:-4px;
+  font-weight:700;
+}
+.contattaci:hover { background:#CC4949; }
