--- a/src/main/resources/templates/fragments/admin.html
+++ b/src/main/resources/templates/fragments/admin.html
@@ -35,14 +35,7 @@
                     	<li><a th:href="@{/admin/storico}">STORICO ORDINI</a></li>
 	                  </ul>
 	                 <div class="btn-group">
-  <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-  <i class="fas fa-user"></i>
-  
-  </button>
-  <div class="dropdown-menu dropdown-menu-right">
-    <button class="dropdown-item" type="button">Action</button>
-    <a class="dropdown-item" th:href="@{/logout}" style="color: red;"><i class="fas fa-sign-out-alt"></i>Log out</a>
-  </div>
+  <a  th:href="@{/logout}" style="color: red;text-decoration: none;font-size: 20px;"><i class="fas fa-sign-out-alt"></i>Log out</a>
 </div>
 					
 				</div>
@@ -79,7 +72,7 @@
 					</div>
 					<form action="" class="footer-section newsletter">
 						<h2>Subscribe Our Newsletter & Join US</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<p>Siamo aperti 7 giurni su 7 veniteci a trovare!</p>
 						<div class="newsletter-box">
 							<i class="fas fa-envelope"></i>
 							<input class="emailbox" type="email" name="" value="" placeholder="Enter your email id">
