--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap" rel="stylesheet">
 		<link th:href="@{/css/style.css}" rel="stylesheet">  	
 		<script src="https://kit.fontawesome.com/ced3f913ea.js" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -36,7 +37,7 @@
 	                    <li><a th:href="@{/suppli}">SUPPLI</a></li>
 	                    <li><a th:href="@{menu}">MENU</a></li>
 	                    <li><a href="#">ORDINA</a></li>
-	                    <li><a th:href="@{/contattaci}">CONTATTACI</a></li>
+	                    <li><a href="/index#contattaci">CONTATTACI</a></li>
 	                  </ul>
 	                  <div class="btn">
 	                    <a class="b1" data-toggle="modal" data-target="#exampleModal">Login</a>
@@ -77,7 +78,7 @@
 					</div>
 					<form action="" class="footer-section newsletter">
 						<h2>Subscribe Our Newsletter & Join US</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<p>Siamo aperti 7 giurni su 7 veniteci a trovare!</p>
 						<div class="newsletter-box">
 							<i class="fas fa-envelope"></i>
 							<input class="emailbox" type="email" name="" value="" placeholder="Enter your email id">
